<resources>
	<string name="delete">Delete</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="exit">Exit</string>
	<string name="callBack">Call Back</string>
	<string name="speakerOff">Speaker off</string>
	<string name="updateDialogButton">Update</string>
	<string name="login">Login</string>
	<string name="hello">Hello World, inboxActivity!</string>
	<string name="app_name">Visual Voicemail</string>
	<string name="smsText_defText">Type to add text</string>
	<string name="searchBoxHint">Tap to Search</string>
	<string name="searchModeHint">Type or Select Recent</string>
	<string name="autoPlay">Autoplay</string>
	<string name="clearAll">Clear All</string>
	<string name="deleteSelected">Delete</string>
	<string name="deleteDialogTitle">Delete</string>
	<string name="deleteDialogMessage">This message will be deleted.</string>
	<string name="inbox_title">Visual Voicemail</string>
	<string name="dontSave">Don\'t Save</string>
	<string name="msgReplyAll">When using Reply All, recipients who have compatible cell phones can see and respond to everyone else\'s messages. You\'re all in on the same group conversation.</string>
	<string name="newMessageNotificationTextStart">You have</string>
	<string name="newMessageNotificationTextEnd">new voice messages</string>
	<string name="newMessageNotification">New voice message</string>
	<string name="newMessageNotificationLastCaller">Last caller:</string>
	<string name="newSingleMessageNotificationText">New Message from</string>
	<string name="notificationTitle">Visual Voicemail</string>
	<string name="unreadMessagesTextEnd">unread voice messages</string>
	<string name="unreadMessageText">unread voice message</string>
	<string name="auto_play_menu_title">Autoplay</string>
	<string name="delete_all_menu_title">Delete all</string>
	<string name="settings_menu_title">Settings</string>
	<string name="refresh_menu_title">Refresh</string>
	<string name="deleteAllDialogTitle">Delete All Messages</string>
	<string name="deleteAllDialogMessage">Select which items to delete</string>
	<string name="deleteAllButton">All</string>
	<string name="deleteUnsavedButton">Unsaved</string>
	<string name="send_text_menu_title">Send text</string>
	<string name="send_voice_menu_title">Send voice</string>
	<string name="view_caller_details_menu_title">Contact details</string>
	<string name="add_to_contacts_menu_title">Add to contacts</string>
	<string name="export_menu_title">Export to file</string>
	<string name="copy_message_text_menu_title">Copy text</string>
	<string name="save_menu_title">Save</string>
	<string name="unsave_menu_title">Unsave</string>
	<string name="share_menu_title">Share</string>
	<string name="delete_menu_title">Delete</string>
	<string name="audio_recorder_send_button_text">SAVE</string>
	<string name="greeting_menu_title">Voicemail greeting</string>
	<string name="auto_save_menu_title">Auto-save all messages</string>
	<string name="notifications_menu_title">Notifications</string>
	<string name="updates_menu_title">Check for updates</string>
	<string name="change_password_title_1">Enter existing voicemail password</string>
	<string name="change_password_title_2">Type in your new voicemail password</string>
	<string name="change_password_title_2a">Type in a new voicemail password</string>
	<string name="change_password_title_3">Retype the new voicemail password</string>
	<string name="change_password_title_4">Updating account...</string>
	<string name="wrong_passwords">Wrong Password, Try Again</string>
	<string name="digits_only_password">Please enter digits only</string>
	<string name="password_changed">Your password was successfully changed.</string>
	<string name="password_not_changed">Your password was not changed and your previous password remains active. Please try again later.</string>
	<string name="password_not_saved">Password not saved, please check network and APN settings and try again</string>
	<string name="password_not_changed_force">You must create a password in Visual Voicemail or by calling Voicemail to be able to receive voicemail messages.</string>
	<string name="greeting_changed">Your greeting message was successfully updated.</string>
	<string name="greeting_not_changed">Your greeting message was not updated. Please try again later.</string>
	<string name="error">Error</string>
	<string name="retrieveError">Retrieve messages error, please try again later.</string>
	<string name="privateNumber">Private Number</string>
	<string name="noTranscriptionMessage">Voicemail message</string>
	<string name="loading">Loading...</string>
	<string name="pref_General_Category_title">General settings</string>
	<string name="pref_Notifications_Category_title">Notifications settings</string>
	<string name="pref_About_Category_title">About</string>
	<string name="pref_Greetings_Toggle_title">Change voicemail greeting</string>
	<string name="pref_Greetings_Toggle_summary">Set your voicemail greeting type</string>
	<string name="pref_Autosave_Toggle_title">Auto-save messages</string>
	<string name="pref_Autosave_Toggle_summary">Save a local copy of newly received voicemail messages</string>
	<string name="pref_Transcription_Toggle_title">Voicemail to text</string>
	<string name="pref_Transcription_Toggle_summary">Transcribe your voicemails to text</string>
	<string name="pref_Password_title">Change voicemail password</string>
	<string name="pref_Password_summary">Set your voicemail password</string>
	<string name="pref_Notifications_Toggle_title">Notifications</string>
	<string name="pref_Notifications_Toggle_summary">Display message notifications in the status bar</string>
	<string name="pref_Proximity_Toggle_title">Proximity Sensor</string>
	<string name="pref_Proximity_Toggle_summary">Deactivate screen when phone is held to ear or screen is covered</string>
	<string name="continue_change_password_button">Continue</string>
	<string name="finish_change_password_button">Finish</string>
	<string name="pref_About_AppVer_title">Application version</string>
	<string name="pref_About_Reset_title">Reset Account</string>
	<string name="pref_Secure_Connection_Toggle_title">Use secure connection</string>
	<string name="pref_Secure_Connection_Toggle_summary">Application will use SSL secure connection to communicate with the server</string>
	<string name="pref_Terms_Category_title">Terms</string>
	<string name="noDataConnectionToast">No connection detected. Turn internet connection on or call Voicemail for new messages.</string>
	<string name="noDataConnectionInboxBadge">No connection detected. Turn internet connection on or call Voicemail for new messages.</string>
	<string name="cantDownloadMessagesError">Unable to download messages. Try later or call Voicemail for new messages.</string>
	<string name="RegisterText">Register</string>
	<string name="SkipText">Skip</string>
	<string name="ATTtermsAndCondistionBody">Blablabla Bla Blabla...</string>
	<string name="ATTtermsAndCondistionTitle">ATT Terms Conditions</string>
	<string name="ATTtitle">ATT</string>
	<string name="WhatIsText">What is Visual Voicemail?</string>
	<string name="WhatIsButton">What is Visual Voicemail Button</string>
	<string name="AccountSetup_1">Save time. Review and manage your voicemail from your smartphone with AT&amp;T Visual Voicemail.</string>
	<string name="AccountSetup_2">Key Features:</string>
	<string name="Welcome_with_per_1">Your Voicemail at a Glance</string>
	<string name="Welcome_with_per_SubDesc_2">Read text of your messages</string>
	<string name="Welcome_with_per_SubDesc_3">Save important messages</string>
	<string name="Welcome_with_per_4">*To use Visual Voicemail, you must allow the app to access your phone and messages.</string>
	<string name="AccountSetup_3_BeginSetup">To set up Visual Voicemail, tap <b>Begin Setup</b>.</string>
	<string name="AccountSetup_3_CallVoicemail">To set up Visual Voicemail tap <b>Call Voicemail</b>.</string>
	<string name="WhatIs_Desc1">Visual Voicemail is a service that delivers voicemail messages right to your smartphone. No more having to call your mailbox to listen to them.</string>
	<string name="WhatIs_Desc2">With Visual Voicemail you can:</string>
	<string name="WhatIs_SubDesc_1">View a list of your voicemail messages</string>
	<string name="WhatIs_SubDesc_2">Play them in any order you choose</string>
	<string name="WhatIs_SubDesc_3">Forward messages via email or MMS</string>
	<string name="WhatIs_SubDesc_4">Save messages to your device memory or the memory card</string>
	<string name="WhatIs_SubDesc_5">Transcribe your messages to text</string>
	<string name="CancelText">Cancel</string>
	<string name="StartText">Start</string>
	<string name="WelcomeText">Welcome</string>
	<string name="SetGreetingText">Set your personal greeting</string>
	<string name="SetPasswordText">Set password</string>
	<string name="WelcomeHeaderText">Your AT&amp;T device comes powered with AT&amp;T Visual Voicemail.</string>
	<string name="add_home_screen_shortcut">Add a Home screen shortcut</string>
	<string name="NextMessageText">Next message</string>
	<string name="PreviousMessageText">Previous message</string>
	<string name="disabledText">disabled</string>
	<string name="ConfigureAllDoneHeader">Setup Complete</string>
	<string name="ConfigureAllDonePart1">Your app has been successfully setup. Tap Finish below to view your messages.</string>
	<string name="inbox_context_menu_read_message_details">Open</string>
	<string name="inbox_context_menu_delete">Delete</string>
	<string name="inbox_context_menu_save">Save</string>
	<string name="inbox_context_menu_share">Share</string>
	<string name="WelcomeATTServiceText">Welcome to AT&amp;T Visual Voicemail.</string>
	<string name="TermsOfService"><a href="http://www.att.com/shop/en/legalterms.html?toskey=VVMTerms">Terms of Service</a></string>
	<string name="PrivacyPolicyLink"><a href="http://att.com/privacy">Privacy Policy</a>.</string>
	<string name="att_visual_voicemail">AT&amp;T visual voicemail</string>
	<string name="att">AT&amp;T&#160;</string>
	<string name="visual_voicemail">Visual Voicemail&#160;</string>
	<string name="AccountSetup_SubDesc_1">Play messages in any order</string>
	<string name="AccountSetup_SubDesc_2">Read text copies of your messages</string>
	<string name="AccountSetup_SubDesc_3">Save important messages</string>
	<string name="your_voicemail_at_a_glance">Your voicemail at a glance</string>
	<string name="by_clicking_activate_vv_you_agree">By clicking <b>Activate Visual Voicemail</b>,\n you agree to the AT&amp;T Visual Voicemail</string>
	<string name="and">&#160;and&#160;</string>
	<string name="activate_visual_voicemail">ACTIVATE VISUAL VOICEMAIL</string>
	<string name="somethingIsntRight">Hmm, something isn\'t right...</string>
	<string name="missing_msisdn_welcome_title">Welcome to</string>
	<string name="missing_msisdn_sub_text">Follow these steps to set up Visual Voicemail:</string>
	<string name="missing_msisdn_line1">1. Call your Voicemail.</string>
	<string name="missing_msisdn_line2">2. Enter your mailbox.</string>
	<string name="missing_msisdn_line3">3. End the call.</string>
	<string name="missing_msisdn_final_text">Continue through the setup process.</string>
	<string name="cato_select_greeting">Select greeting</string>
	<string name="txtSetupLoading">Just a moment...</string>
	<string name="finishSetup">Finish Setup</string>
	<string name="greetingError1">We couldn\'t get the information we need to set up your greeting right now.</string>
	<string name="greetingError2">Finish setting up your Visual Voicemail, then visit Setings > Greetings to record your greeting.</string>
	<string name="greetingErrorDesc">Looks like we couldn\'t get the greeting information we needed at the moment\n\n You can still finish setup greeting from settings</string>
</resources>