<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/att_visual_voicemail_title"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"/>

    <ScrollView
        android:id="@+id/scroll_screen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/imgWelcome"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/your_voicemail_at_a_glance"
                android:gravity="center"
                android:paddingTop="4dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/marketing" />

            <LinearLayout
                android:id="@+id/LinearLayout01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="left"
                android:orientation="vertical">

                <com.att.mobile.android.vvm.ui_components.CompoundTextWithBullet
                    xmlns:custom="http://schemas.android.com/apk/res-auto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    custom:text_color="@color/gray_dark"
                    custom:textSrc="@string/AccountSetup_SubDesc_1"/>

                <com.att.mobile.android.vvm.ui_components.CompoundTextWithBullet
                    xmlns:custom="http://schemas.android.com/apk/res-auto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    custom:text_color="@color/gray_dark"
                    custom:textSrc="@string/AccountSetup_SubDesc_2"/>

                <com.att.mobile.android.vvm.ui_components.CompoundTextWithBullet
                    xmlns:custom="http://schemas.android.com/apk/res-auto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    custom:text_color="@color/gray_dark"
                    custom:textSrc="@string/AccountSetup_SubDesc_3"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:background="@color/white"
                android:gravity="center|bottom"
                android:orientation="vertical"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:paddingTop="7dp"
                android:layout_gravity="bottom"
                >

                <TextView
                    android:id="@+id/tvTC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="7dp"
                    android:gravity="center_horizontal"
                    android:lineSpacingExtra="4dp"
                    android:text="@string/by_clicking_activate_vv_you_agree"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/welcome_screen_tc_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="7dp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvTC1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:linksClickable="true"
                        android:text="@string/TermsOfService"
                        android:textColor="@color/blue_dark"
                        android:textColorLink="@color/blue_dark"
                        android:textSize="@dimen/welcome_screen_tc_size" />

                    <TextView
                        android:id="@+id/tvTC2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/and"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/welcome_screen_tc_size"
                        android:typeface="sans" />

                    <TextView
                        android:id="@+id/tvTC3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:linksClickable="true"
                        android:text="@string/PrivacyPolicyLink"
                        android:textColor="@color/blue_dark"
                        android:textColorLink="@color/blue_dark"
                        android:textSize="@dimen/welcome_screen_tc_size" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/btnBeginsetup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/account_setup_button_margin"
            android:background="@drawable/blue_button"
            android:text="@string/activate_visual_voicemail"
            android:textColor="@color/white"
            android:textSize="@dimen/welcome_screen_button_text_size"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

</LinearLayout>