<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical">

	<!-- the top panel - screen's title -->
	<include layout="@layout/tool_bar"/>

    <ViewFlipper
        android:id="@+id/viewFlipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/cato_select_greeting"
            android:orientation="vertical">

            <ListView
                android:id="@+id/list"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"/>

        </LinearLayout>




        <LinearLayout
            android:id="@+id/ErrorView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:contentDescription="@string/greetingErrorDesc"
            android:layout_marginTop="@dimen/actionbar_margin"
            android:layout_marginLeft="@dimen/account_setup_side_padding"
            android:layout_marginRight="@dimen/account_setup_side_padding"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtOops"
                style="@style/AccountSetupVoicemailHeaderText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/account_setup_error_top_margin"
                android:layout_marginLeft="@dimen/account_setup_side_padding"
                android:layout_marginRight="@dimen/account_setup_side_padding"
                android:textSize="@dimen/account_setup_sub_header_text_size"
                android:text="@string/somethingIsntRight" />

            <TextView
                android:id="@+id/greeting_error_sub1"
                style="@style/AccountSetupDetailsStyle"
                android:layout_marginLeft="@dimen/account_setup_side_padding"
                android:layout_marginRight="@dimen/account_setup_side_padding"
                android:layout_marginBottom="@dimen/account_setup_details_top_margin"
                android:text="@string/greetingError1" />

            <TextView
                android:id="@+id/greeting_error_sub2"
                android:text="@string/greetingError2"
                style="@style/AccountSetupDetailsStyle"
                android:layout_marginLeft="@dimen/account_setup_side_padding"
                android:layout_marginRight="@dimen/account_setup_side_padding"
                android:layout_marginBottom="@dimen/account_setup_details_top_margin" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/swirlView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/txtSetupLoading"
            android:orientation="vertical"
            android:visibility="visible">

            <com.att.mobile.android.infra.utils.LoadingProgressBar
                android:id="@+id/gaugeSetupProgress"
                android:layout_width="@dimen/loading_animation_size"
                android:layout_height="@dimen/loading_animation_size"
                android:layout_marginBottom="@dimen/account_setup_loading_bottom_margin"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/actionbar_margin"
                android:layout_gravity="center"
                android:visibility="visible"
                app:loading_width="@dimen/loading_animation_width" />

            <!-- Header text -->
            <TextView
                android:id="@+id/txtHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/account_setup_text_side_margin"
                android:layout_marginRight="@dimen/account_setup_text_side_margin"
                android:layout_marginTop="16dip"
                android:gravity="top|center_horizontal"
                android:text="@string/txtSetupLoading"
                android:textColor="@color/gray_dark"
                android:textSize="18sp" />

        </LinearLayout>

    </ViewFlipper>
    <Button
        android:id="@+id/buttonFinishSetup"
        android:text="@string/finishSetup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/account_setup_side_padding"
        android:layout_marginRight="@dimen/account_setup_side_padding"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/welcome_button_bottom_margin"
        android:gravity="center"
        android:textAllCaps="true"
        style="?android:attr/borderlessButtonStyle"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/blue_button"/>

</LinearLayout>